syntax = "proto3";

package zk_verifier;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service ZkVerifier {
    rpc AddZkIssuer (IssuerPublicKeyEntry) returns (google.protobuf.Empty);
    rpc RemoveZkIssuer (google.protobuf.StringValue) returns (google.protobuf.Empty);
    rpc AddZkIssuerPublicKey (IssuerPublicKeyEntry) returns (google.protobuf.Empty);
    rpc RemoveZkIssuerPublicKey (IssuerPublicKeyEntry) returns (google.protobuf.Empty);
    rpc SetZkVerifiyingKey (google.protobuf.StringValue) returns (google.protobuf.Empty);
}


message IssuerPublicKeyEntry {
    string issuer_name = 1;
    string issuer_pubkey = 2;
}
